Ignore self close tags rule and _site dir

--- a/.github/linters/.htmlhintrc
+++ b/.github/linters/.htmlhintrc
@@ -14,9 +14,9 @@
   "input-requires-label": true,
   "tags-check": true,
   "tag-pair": true,
-  "tag-self-close": true,
+  "tag-self-close": false,
   "tagname-lowercase": true,
-  "empty-tag-not-self-closed": true,
+  "empty-tag-not-self-closed": false,
   "src-not-empty": true,
   "href-abs-or-rel": true,
   "id-class-ad-disabled": true,
