--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -48,6 +48,7 @@ jobs:
           # ADD YOUR CUSTOM ENV VARIABLES HERE OR DEFINE THEM IN A FILE .mega-linter.yml AT THE ROOT OF YOUR REPOSITORY
           # DISABLE: COPYPASTE,SPELL # Uncomment to disable copy-paste and spell checks
           DEFAULT_BRANCH: main
+          HTML_HTMLHINT_ARGUMENTS: --ignore '**/_site/**'
 
       # Upload Mega-Linter artifacts
       - name: Archive production artifacts
