--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -39,7 +39,7 @@ jobs:
       # Mega-Linter
       - name: Mega-Linter
         id: ml
-        uses: nvuillam/mega-linter@alpha
+        uses: nvuillam/mega-linter@v4
         env:
           # All available variables are described in documentation
           # https://nvuillam.github.io/mega-linter/configuration/
