--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -1,5 +1,5 @@
 APPLY_FIXES: all
-DISABLE_LINTERS: JAVSCRIPT_STANDARD
+DISABLE_LINTERS: JAVASCRIPT_STANDARD
 HTML_HTMLHINT_ARGUMENTS: --ignore '**/_site/**'
 PRINT_ALPACA: false
 SPELL_CSPELL_ARGUMENTS: -v
