Add linters to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,12 @@ _includes/scripts.html
 # Others
 .vagrant
 node_modules/
+
+# Linters
+.cspell.json
+.eslintrc.json
+.htmlhintrc
+.jscpd.json
+.markdown-lint.json
+.ruby-lint.yml
+report/*
